# Professional-CMake-13th

./: .gitignore  README.md
chapter03_minimal_project/: CMakeLists.txt  print.cpp
chapter04_interface_library/: CMakeLists.txt  hello.cpp  print_dep.hpp
chapter04_private_library/: CMakeLists.txt  hello.cpp
chapter04_public_library/: CMakeLists.txt  hello.cpp  print.cpp  print.hpp  print_dep.hpp
chapter06_flow_control/: CMakeLists.txt
chapter07_guard/: guarded.cmake  new_guard.cmake  unguarded.cmake
chapter07_include/subdir/: include.cmake
chapter07_project/: CMakeLists.txt
chapter07_project/subdir/: CMakeLists.txt
chapter07_subdirectory/subdir/: CMakeLists.txt
chapter07_subdirectory/subdir/subdir_subdir/: CMakeLists.txt
chapter08_function/: compile.sh  invoke.cmake  keyword.cmake  override.cmake  scope.cmake
chapter09_basic_properties/: CMakeLists.txt  hello.cpp
chapter09_global_properities/: CMakeLists.txt
chapter09_other_properties/: CMakeLists.txt
chapter10_generator_expressions/: CMakeLists.txt  compile_debug.sh  compile_release.sh  hello.cpp  print_debug.cpp  print_release.cpp
chapter11_module/: CMakeLists.txt  print.hpp
chapter11_module/cmake/: Findsub2.cmake  sub.cmake
chapter12_policy/: CMakeLists.txt  compile.sh
chapter13_debugging_and_diagnostics/: CMakeLists.txt  compile_context.sh  compile_context_log.sh  compile_perf.sh  compile_verbose.sh
chapter14_build_type/: CMakeLists.txt  compile.sh  print.cpp
chapter15_compiler_and_linker/: CMakeLists.txt  hello.cpp  print.cpp  print_dep.cpp
chapter16_advanced_linking/: CMakeLists.txt  hello.cpp  hello2.cpp  hello2_lib.cpp  hello2_lib.hpp  hello2_lib_dep.cpp  hello2_lib_dep.hpp  hello2_lib_dep2.cpp  hello2_lib_dep2.hpp  hello3.cpp  print.cpp  print.hpp  print_dep.cpp  print_dep.hpp
chapter17_language_requirements/: CMakeLists.txt  print.cpp
chapter18_target_type/: CMakeLists.txt  header_only.cpp  main.cpp  main2.cpp  print_long.cpp  print_short.cpp  shared_main.cpp
chapter19_custom_tasks/: CMakeLists.txt  print_a_new_file.cpp  print_arg.cpp
chapter20_copy_file/: CMakeLists.txt  testing_move_file
chapter20_file_glob_and_download/: CMakeLists.txt
chapter20_file_manipulation/: CMakeLists.txt  a_simple_text_file.txt  compile.sh
chapter21_version/: CMakeLists.txt  git_version.cpp.in  print_config.cpp  print_version.cpp  print_version_single_def.cpp  version_config.h.in
chapter22_library/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  print.cpp  print2.cpp  print3.cpp
chapter22_symbol/: CMakeLists.txt  depen.cpp  test_symbol.cpp  test_symbol.hpp  test_symbol_main.cpp
chapter22_wrong_link/: CMakeLists.txt  dynamic_lib.cpp  dynamic_lib.hpp  main.cpp  static_lib.cpp  static_lib.hpp
chapter23_toolchain/: CMakeLists.txt  compile.sh  toolchain.cmake
chapter25_find/: CMakeLists.txt
chapter26_testing/: CMakeLists.txt  compile.sh  env_test_app.cpp  simple_test_app.cpp
chapter27_import/: CMakeLists.txt  main.cpp
chapter27_installing/: CMakeLists.txt  compile.sh  error.hpp  file_reader.cpp  file_reader.hpp  main.cpp
chapter28_packaging/: CMakeLists.txt  compile.sh  main.cpp  print_lib.cpp
chapter28_packaging/packaging/: CMakeLists.txt
chapter29_external_project/: CMakeLists.txt  compish.sh
chapter3/: CMakeLists.txt  hello.cpp
chapter30_fetch_content/: CMakeLists.txt  compile.sh  test_main.cpp
chapter31_consumable/: CMakeLists.txt  compile.sh
chapter32_dependency_providers/: CMakeLists.txt  compile.sh
chapter32_dependency_providers/cmake/: highjacked.cmake  injected_code.cmake
chapter33_presets/: CMakeLists.txt  CMakePresets.json  compile.sh
chapter34_organization/: CMakeLists.txt
chapter35_build_performance/: CMakeLists.txt  compile.sh
chapter35_build_performance/src/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  main.cpp
chapter4_interface_library/: hello.cpp  print_dep.cpp  print_dep.hpp
chapter4_private_library/: hello.cpp  print.cpp
chapter4_public_library/: hello.cpp  print.cpp  print.hpp  print_dep.cpp  print_dep.hpp
chapter5/: CMakeLists.txt
chapter5_variable/: compile_with_cache_var.sh
chapter6_flow_control/: CMakeLists.txt  compile.sh
chapter7_guard/: CMakeLists.txt
chapter7_include/: CMakeLists.txt
chapter7_include/subdir/: CMakeLists.txt
chapter7_project/subdir/subdir_subdir/: CMakeLists.txt
chapter7_subdirectory/: CMakeLists.txt
chapter8_function/: CMakeLists.txt  arg.cmake  base_func.cmake  keyword.cmake  special_var.cmake
